# Conway

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Engine/: Board.cpp  Board.h  Coord.h  Engine.cpp  Engine.h
